@@ -1,3 +1,4 @@
+	* fix proxy failure semantics with regards to anonymous mode
 	* fix round-robin seed-unchoke algorithm
 	* add bootstrap.sh to generage configure script and run configure
 	* fix bug in SOCK5 UDP support
